Refactor assignment logic, rename app & license
Major changes: rebrand app, update license, and refactor assignment/payment flows.

- License changed from MIT to Apache-2.0 (LICENSE replaced).
- App renamed in package.json (name, appId, productName, repo updated) to "farm-laborer-management".
- Removed summary monetary fields from Worker entity.
- Added initial migration file.
- Heavily refactored assignment IPC handlers (create, delete, update_status): improved validation, stricter relation checks, normalized date handling, transactional QueryRunner usage, idempotent payment creation on completion, and automatic redistribution of LuWang across active assignments while honoring locked (completed) assignments. Responses and notes now include clearer metadata for cancellations/redistributions.
- Small IPC additions/cleanup (new pitak completed handler, other IPC/renderer adjustments) and numerous renderer component updates to match API/behavior changes.

These changes rework core assignment rules to ensure consistent LuWang allocation, safer payment generation, and support the project rebranding.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "kabisilya-management",
+  "name": "farm-laborer-management",
   "private": true,
   "version": "1.0.0",
   "main": "src/main/index.js",
   "build": {
-    "appId": "com.CyberArcenal.kabisilya.app",
-    "productName": "Kabisilya Management",
+    "appId": "com.CyberArcenal.farm-laborer-management.app",
+    "productName": "Farm Laborer Management",
     "directories": {
       "output": "release"
     },
@@ -23,7 +23,7 @@
       {
         "provider": "github",
         "owner": "CyberArcenal",
-        "repo": "Kabisilya-Management"
+        "repo": "Farm-Laborer-Management"
       }
     ]
   },
